--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ def my_sort(arr):
                 <li><a href="theory/bubble-sort.html" target="_blank">Детальна теорія: Бульбашкове сортування</a></li>
                 <li><a href="theory/selection-sort.html" target="_blank">Детальна теорія: Сортування вибором</a></li>
                 <li><a href="theory/merge-sort.html" target="_blank">Детальна теорія: Сортування злиттям</a></li>
-                <li><a href="theory/complexity.md" target="_blank">Аналіз складності алгоритмів</a></li>
+                <li><a href="theory/complexity.html" target="_blank">Аналіз складності алгоритмів</a></li>
             </ul>
             
             <h3>🌐 Корисні посилання:</h3>
