--- a/course-page.html
+++ b/course-page.html
@@ -377,7 +377,7 @@
             </div>
             
             <div class="info-box">
-                <strong>Цільова аудиторія:</strong> Учні 10-11 класів з поглибленим вивченням інформатики
+                <strong>Цільова аудиторія:</strong> Учні 10-x класів з рівнем стандарту
             </div>
             
             <div class="info-box">
